# AzureDataLakeIntermediate

./: .gitignore  README.md  azure_uploader.py  pyproject.toml
Core/Credentials/: credentials.py  set_azure_env.sh
Core/Downloader/: dowloaders.py
Core/Downloaders/: downloaders.py
Core/Terraform/: .reset.sh  1_providers.tf  2_main.tf  3_variables.tf  4_locals_config.tf
Core/Terraform/modules/ClientSetup/: 1_providers.tf  2_main.tf  3_variables.tf
Core/Terraform/modules/DatalakeSetup/: 1_providers.tf  2_main.tf  3_variables.tf
Core/Terraform/modules/Keyvault/: 1_providers.tf  2_main.tf  3_variables.tf
Core/Uploader/: azure_uploader.py
Core/Uploaders/: azure_uploader.py
Core/Utils/: helpers.py
Credentials/: credentials.py
